# Chess

./: CMakeCache.txt  CMakeLists.txt  Chess  Makefile  README.md  cmake_install.cmake
include/: Chessboard.cpp  analyze.cpp  chess_setting.cpp  declar.cpp  print.cpp  render.cpp  setting.cpp
src/: main.cpp  render.cpp
